--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
             </div>
         </div>
     </section>
+    <section id="portfolio">
+        <div class="filtro"></div>
+        <div class="container-grid">
+            <a href="#">Conheça nosso Portfolio Gamificado</a>
+        </div>
+    </section>
 </body>
 
 </html>
