--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="banner">
-        <header>
+        <header class="container-grid">
             <img src="img/logo.svg" alt="Logo da empresa Gamifica AI">
             <nav class="menu">
                 <a href="#">Sobre</a>
@@ -19,22 +19,25 @@
                     <a href="#">Portfolio
                         <a href="#">Contate-nos</a>
             </nav>
+
+        </header>
+        <div class="container-grid conteudo-banner">
+            <p>GamificaAI: Inovação através da sua diversão</p>
+        </div>
     </div>
-    </header>
-    <div class="container-grid conteudo-banner">
-        <p>GameficaAI: Inovação através da sua diversão</p>
-    </div>
-    </div>
+
     <section id="sobre">
         <h2>sobre nossa empresa</h2>
         <p>Lorem ipsum dolor sit amet. Sed laboriosam amet qui necessitatibus eveniet id illo quod ea reiciendis quam
             non similique quis a illum galisum est voluptas eaque. Et dolorem saepe aut velit autem et tempora totam non
-            inventore corrupti? Vel dolores numquam et praesentium reiciendis aut pariatur nostrum qui fugit iure.
+            inventore corrupti? Vel dolores numquam et praesentium reiciendis aut pariatur nostrum qui fugit iure.</p>
+
         <p>Eum neque quaerat aut fugit sunt qui voluptatem ducimus id rerum voluptas est voluptatum facere est nisi
             accusamus ut cumque voluptas. Id rerum molestiae est expedita maxime est corporis voluptas aut optio eius ad
             esse itaque non molestiae soluta! Quia non sequi accusamus ut debitis accusamus aut natus dolor ad vero
             quisquam nam ullam quas ab nulla eveniet. Ut nemo quia et quos molestiae ea quidem quasi et quidem quam et
             laborum dolor ut pariatur nihil ea rerum error.</p>
+
         <p>Eum neque quaerat aut fugit sunt qui voluptatem ducimus id rerum voluptas est voluptatum facere est nisi
             accusamus ut cumque voluptas. Id rerum molestiae est expedita maxime est corporis voluptas aut optio eius ad
             esse itaque non molestiae soluta! Quia non sequi accusamus ut debitis accusamus aut natus dolor ad vero
@@ -74,6 +77,30 @@
             <a href="#">Conheça nosso Portfolio Gamificado</a>
         </div>
     </section>
+
+    <section id="contato">
+        <h2>Contate-nos</h2>
+
+        <form>
+            <div class="campo">  
+                <label for="campo-nome">Qual é o seu nome?</label>
+                <input id="campo-nome" type="text" placeholder="Digite seu nome...">
+            </div>
+            <div class="campo">
+                <label for="">Em qual e-mail podemos te responder</label>
+                <input type="email" name="" id="campo-email" placeholder="Digite seu email...">
+            </div>
+            <div class="campo-textarea">
+                <label for="campo-descricao">Descreva um pouco da sua empresa, e também o problema que está procurando
+                    solucionar</label>
+                <textarea name="" id="campo-descricao" cols="30" rows="10" placeholder="Descreva sua empresa e o problema que ela está enfrentando."></textarea>
+            </div>
+            <button type="submit">Enviar</button>
+        </form>
+
+
+    </section>
+
 </body>
 
 </html>
