feat: Footer e animação implementados

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamifica Ai</title>
-
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="img/favicon.png" class="favicon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,15 +15,15 @@
         <header class="container-grid">
             <img src="img/logo.svg" alt="Logo da empresa Gamifica AI">
             <nav class="menu">
-                <a href="#">Sobre</a>
-                <a href="#">Cases de Sucesso
-                    <a href="#">Portfolio
-                        <a href="#">Contate-nos</a>
+                <a href="#sobre">Sobre</a>
+                <a href="#cases">Cases de Sucesso</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#contato">Contate-nos</a>
             </nav>
 
         </header>
         <div class="container-grid conteudo-banner">
-            <p>GamificaAI: Inovação através da diversão</p>
+            <p>GamificaAI: <span>Inovação através da diversão!</span></p>
         </div>
     </div>
 
