feat: Linguagem .json e elementos para cadastro iniciados no gamifica.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="script.js" defer></script>
 </head>
 
-<body onload="renderizarCases()">
+<body onload="carregarCases()">
     <div class="banner">
         <header class="container-grid">
             <img src="img/logo.svg" alt="Logo da empresa Gamifica AI">
